# WireDolphin

./: .clang-format  .gitignore  CHANGELOG.md  CMakeLists.txt  README.md  cli.cpp  main.cc  main.cpp  vcpkg.json
.fleet/: run.json
hack/: build.sh  makeicns.sh  resources.qrc
include/: axistag.h  conf.h  db.h  interface.h  locale.hpp  logger.h  mainwindow.h  packet.h  packetsource.h  preferenceswindow.h  protocol.h  statswindow.h  trayicon.h  utils.h
include/dissectors/: arp.h  ethernet.h  http.h  icmp.h  ipv4.h  ipv6.h  tcp.h  udp.h
include/parser/: ethernet.h  ipv6.h
innta/: interface.cc  packet.cc  packetsource.cc  trayicon.cc  utils.cc
innta/parser/: tcp.cc
innta/view/: mainwindow.h  mainwindow.ui  preferenceswindow.cc  preferenceswindow.h  preferenceswindow.ui  qcustomplot.cc  qcustomplot.h  statswindow.cc  statswindow.h  statswindow.ui
resources/: icon.icns
src/: axistag.cpp  conf.cpp  db.cpp  interface.cpp  mainwindow.cpp  mainwindow.ui  packet.cpp  packetsource.cpp  trayicon.cpp
src/dissectors/: arp.cpp  http.cpp  icmp.cpp  ipv4.cpp  ipv6.cpp  tcp.cpp  udp.cpp
src/logger/: logger.cpp
src/packet/: packet.cpp  packetsource.cpp
src/utils/: utils.cpp
src/window/: mainwindow.cpp  mainwindow.ui
src/window/preferences/: preferenceswindow.cpp  preferenceswindow.ui
src/window/stats/: statswindow.cpp  statswindow.ui
